Add global overview

--- a/client/src/styling/index.css
+++ b/client/src/styling/index.css
@@ -40,3 +40,9 @@ p.grid-header-title {
 .MuiTab-wrapper {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+td.MuiTableCell-root {
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 15px;
+	font-weight: 400;
+}
